--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-redux-apollo-example",
-  "description": "Example React.js app",
-  "version": "1.0.0",
+  "description": "A React/Apollo full-stack example ap",
+  "version": "0.0.0",
   "scripts": {
     "start": "node build/server.js"
   },
