--- a/package.json
+++ b/package.json
@@ -12,29 +12,27 @@
   "license": "MIT",
   "author": "Léo LE BRAS <leo.lebrasf@gmail.com> (http://github.com/LeoLebras)",
   "devDependencies": {
-    "babel-core": "^6.6.5",
-    "babel-eslint": "^5.0.0-beta4",
+    "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "eslint": "^1.10.3",
-    "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-react": "^3.11.3",
+    "eslint": "^3.0.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-react": "^5.2.2",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
+    "express": "^4.14.0",
     "postcss-loader": "^0.9.1",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-inspector": "^0.5.3",
-    "rimraf": "^2.4.3",
+    "redux-devtools-inspector": "^0.6.1",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.9.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.0"
   },
   "dependencies": {
     "apollo-client": "^0.3.26",
