--- a/.flowconfig
+++ b/.flowconfig
@@ -6,28 +6,28 @@
 ./src/
 
 [libs]
-./interfaces/
+./src/store/
 
 [options]
 module.system=haste
 esproposal.class_instance_fields=enable
 esproposal.class_static_fields=enable
 
-module.name_mapper='.*\.\(scss\|css\)$' -> 'CSSModule'
-module.name_mapper='^@components\/\(.*\)$' -> '<PROJECT_ROOT>/src/ressources/components/\1'
-module.name_mapper='^@components$' -> '<PROJECT_ROOT>/src/ressources/components'
-module.name_mapper='^@layouts\/\(.*\)$' -> '<PROJECT_ROOT>/src/ressources/layouts/\1'
-module.name_mapper='^@layouts$' -> '<PROJECT_ROOT>/src/ressources/layouts'
+module.name_mapper='^@components\/\(.*\)$' -> '<PROJECT_ROOT>/src/shared/components/\1'
+module.name_mapper='^@components$' -> '<PROJECT_ROOT>/src/shared/components'
+module.name_mapper='^@layouts\/\(.*\)$' -> '<PROJECT_ROOT>/src/shared/layouts/\1'
+module.name_mapper='^@layouts$' -> '<PROJECT_ROOT>/src/shared/layouts'
 module.name_mapper='^@config\/\(.*\)$' -> '<PROJECT_ROOT>/src/config/\1'
 module.name_mapper='^@config$' -> '<PROJECT_ROOT>/src/config'
 module.name_mapper='^@store\/\(.*\)$' -> '<PROJECT_ROOT>/src/store/\1'
 module.name_mapper='^@store$' -> '<PROJECT_ROOT>/src/store'
-module.name_mapper='^@Feed\/\(.*\)$' -> '<PROJECT_ROOT>/src/app/Feed/\1'
-module.name_mapper='^@Feed$' -> '<PROJECT_ROOT>/src/app/Feed'
-module.name_mapper='^@Wine\/\(.*\)$' -> '<PROJECT_ROOT>/src/app/Wine/\1'
-module.name_mapper='^@Wine$' -> '<PROJECT_ROOT>/src/app/Wine'
 module.name_mapper='^@utils\/\(.*\)$' -> '<PROJECT_ROOT>/src/utils/\1'
 module.name_mapper='^@utils$' -> '<PROJECT_ROOT>/src/utils'
+
+module.name_mapper='^@Feed\/\(.*\)$' -> '<PROJECT_ROOT>/src/bundles/Feed/\1'
+module.name_mapper='^@Feed$' -> '<PROJECT_ROOT>/src/bundles/Feed'
+module.name_mapper='^@Wine\/\(.*\)$' -> '<PROJECT_ROOT>/src/bundles/Wine/\1'
+module.name_mapper='^@Wine$' -> '<PROJECT_ROOT>/src/bundles/Wine'
 
 suppress_type=$FlowIssue
 suppress_type=$FlowFixMe
